<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_EP7402_CoE_Motor" Id="{98d0055d-5370-4d94-8e9e-fee85c635da2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_EP7402_CoE_Motor :
(
	Peak_Current:=1,
	Rated_Current:=2,
	Rated_Voltage:=3,
	Phase_To_Phase_Resistance:=4,
	Start_Velocity:=5,
	Mechanical_To_Electrical_Ratio:=6,
	Rated_Velocity:=7,
	I2T_Warn_Level:=8,
	I2T_Error_Level:=9,
	Motor_Thermal_Time_Constant:=10
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>