<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_EP7402_CoE_SynchronInfoData" Id="{f927f532-758d-4c7d-9e95-282eeccaa246}">
    <Declaration><![CDATA[ {attribute 'pack_mode' := '0'}
// Represents data struct of COE Index 8022/8032 --> can be determined in esi
TYPE ST_EP7402_CoE_SynchronInfoData :
STRUCT
	aSub_Index_res_000 : ARRAY [1..4] OF BYTE;
	nInfoData1 : USINT;
	nInfoData2 : USINT;
	aSub_Index_res_001 : ARRAY [1..6] OF BYTE;
	nInfoData3 : USINT;
	aSub_Index_res_002 : ARRAY [1..3] OF BYTE;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>